--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -3,6 +3,9 @@ security:
     providers:
         in_memory: { memory: ~ }
     firewalls:
+        api_doc:
+            pattern: ^/api/doc
+            security: false
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
