--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
         "white-october/pagerfanta-bundle": "^1.2"
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.1",
         "symfony/debug-pack": "*",
         "symfony/dotenv": "^4.1",
         "symfony/maker-bundle": "^1.0",
