--- a/config/packages/nelmio_api_doc.yaml
+++ b/config/packages/nelmio_api_doc.yaml
@@ -1,9 +1,17 @@
 nelmio_api_doc:
     documentation:
         info:
-            title: Mon API
-            description: Ma première API
+            title: API plateforme
+            description: Documentation de L'API plateforme
             version: 1.0.0
+        #securityDefinitions:
+            #Bearer:
+                #type: apiKey
+                #description: 'Value: Bearer {jwt}'
+                #name: Authorization
+                #in: header
+        #security:
+            #- Bearer: []
     areas: # to filter documented areas
         path_patterns:
-            - ^/api(?!/doc$) # Accepts routes under /api except /api/doc
+            - ^/articles(?!/doc$) # Accepts routes under /articles except /api/doc
