--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,11 @@
         "php": "^7.1.3",
         "ext-iconv": "*",
         "friendsofsymfony/rest-bundle": "^2.3",
+        "friendsofsymfony/user-bundle": "~2.0",
         "jms/serializer-bundle": "^2.4",
+        "lexik/jwt-authentication-bundle": "^2.6",
         "nelmio/api-doc-bundle": "^3.4",
+        "nelmio/cors-bundle": "^1.5",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/asset": "^4.1",
         "symfony/console": "^4.1",
