--- a/config/packages/nelmio_api_doc.yaml
+++ b/config/packages/nelmio_api_doc.yaml
@@ -4,14 +4,14 @@ nelmio_api_doc:
             title: API plateforme
             description: Documentation de L'API plateforme
             version: 1.0.0
-        #securityDefinitions:
-            #Bearer:
-                #type: apiKey
-                #description: 'Value: Bearer {jwt}'
-                #name: Authorization
-                #in: header
-        #security:
-            #- Bearer: []
+        securityDefinitions:
+            Bearer:
+                type: apiKey
+                description: 'Authorization: Bearer {jwt}'
+                name: Authorization
+                in: header
+        security:
+            - Bearer: []
     areas: # to filter documented areas
         path_patterns:
-            - ^/articles(?!/doc$) # Accepts routes under /articles except /api/doc
+            - ^/api(?!/doc$) # Accepts routes under /articles except /api/doc
