--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,7 +4,7 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
-    locale: 'en'
+    locale: 'fr'
 
 services:
     # default configuration for services in *this* file
@@ -29,3 +29,26 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+# FOS user config
+fos_user:
+    db_driver:      orm # other valid values are 'mongodb', 'couchdb' and 'propel'
+    firewall_name:  main
+    user_class:     App\Entity\User
+    from_email:
+        address: "no-reply@amediasolutions.fr"
+        sender_name: "Amedia Solutions"
+    registration:
+#        form:
+#            type: AppBundle\Form\UserRegisterType
+        confirmation:
+            enabled: true
+            template:   FOSUserBundle:Registration:email.txt.twig
+            from_email:
+                address:        "no-reply@amediasolutions.fr"
+                sender_name:    "No Reply Registration"
+    service:
+        mailer: fos_user.mailer.twig_swift
+    resetting:
+        email:
+            template:   FOSUserBundle:Resetting:email.txt.twig
