--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -6,5 +6,9 @@ api:
     prefix: /api
     resource: '../src/Controller/Api'
 
+gesdinet_jwt_refresh_token:
+    path:       /api/token/refresh
+    controller: gesdinet.jwtrefreshtoken::refresh
+
 logout:
     path: /logout
