--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "friendsofsymfony/rest-bundle": "^2.3",
         "friendsofsymfony/user-bundle": "~2.0",
         "jms/serializer-bundle": "^2.4",
+        "gesdinet/jwt-refresh-token-bundle": "^0.6.0",
         "lexik/jwt-authentication-bundle": "^2.6",
         "nelmio/api-doc-bundle": "^3.4",
         "nelmio/cors-bundle": "^1.5",
